Create a layout for projects

--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     {{ include.head_meta }}
-    <title>{{ site.title }}{% if page.title != nil %} | {{ page.title }}{% endif %}</title>
+    <title>{{ site.title | smartify }}{% if page.title != nil %} | {{ page.title | smartify }}{% endif %}</title>
     <link rel="stylesheet" href="{{ site.baseurl }}{% link assets/style.scss %}" />
     {{ include.head_other }}
   </head>
