--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,7 +1,7 @@
-{% capture the_content %}
-  <main>
-    {{ content }}
-  </main>
-{% endcapture %}
+---
+layout: 'default'
+---
 
-{% include layout.html content=the_content %}
+<main>
+  {{ content }}
+</main>
