Don't stretch carousel images

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -50,6 +50,12 @@ iframe {
   border: none;
 }
 
+// Utilities
+
+.cover {
+  object-fit: cover;
+}
+
 // Horizontal definition list
 
 dl.horizontal {
