--- a/_includes/layout.html
+++ b/_includes/layout.html
@@ -13,7 +13,7 @@
   <body>
     <nav id="main-navbar">
       <a href="{{ site.baseurl }}{% link index.html %}">
-        <img src="{{ site.baseurl }}{% link assets/images/logo.jpg %}" alt="Morena Architects logo" id="main-logo" />
+        <img src="{{ site.baseurl }}{% link assets/images/logo.png %}" alt="Morena Architects logo" id="main-logo" />
       </a>
 
       <menu>
