--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -24,5 +24,5 @@ layout: 'default'
 </div>
 
 {% for image in page.images %}
-  <img src="{{ image | relative_url }}" />
+  <img src="{{ image | relative_url }}" class="w-100" />
 {% endfor %}
