--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: 'default'
 ---
 
-<div style="display: flex; gap: 4em;">
+<div style="display: flex; gap: 4em; align-items: baseline;">
   <div style="flex: 1 0;">
     {% if page.title != nil %}
       <h1>{{ page.title | smartify }}</h1>
